# construction-data-pipeline

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  ANALISE_PROJETO_COMPLETA.md  ANÁLISE_PROPOSTA_REGIONAL.md  APRESENTACAO_INVESTIDOR_ANJO.md  CBIC_MASTER_README.md  DIAGNOSTICO_BCB_1207.md  INDICE_RAPIDO_REFERENCIA.md  PROJETO_CONCLUIDO.md  QUICK_START_5_MINUTOS.md  README.md  RELATORIO_FINAL_IMPLEMENTACAO.md  RELATORIO_OTIMIZACAO_BI.md  RESUMO_EXECUTIVO_BI.md  SUMARIO_ANALISE_FINAL.md  TIMELINE_HISTORICO_ATUALIZACOES.md  atualizar_dim_metodo.py  buscar_serie_alternativa.py  corrigir_abas_bi.py  diagnostico_bcb.py  expand_to_regional.py  fix_dim_metodo.py  implement_cbic_fase1.py  integrate_cbic_real_factors.py  listar_abas_existentes.py  normalizar_dados_cbic.py  normalizar_dados_cbic_v2.py  popular_tabelas_vazias.py  processar_desemprego.py  pyproject.toml  requirements.txt  revisar_abas_bi.py  run_complete_integration.py  show_results.py  test_api_area.py  upload_fase2_completo.py  upload_fase2_to_sheets.py  upload_regional_to_sheets.py  (+1 more)
backups/: dim_metodo_backup_20251114_130931.csv  dim_metodo_backup_20251114_150001.csv  dim_metodo_backup_20251114_153158.csv  dim_metodo_backup_20251114_153338.csv  dim_topografia_backup_20251113_223838.csv
configs/: cbic_sources.json  dim_cenarios_construcao.csv  dim_fatores_pavimento.csv  dim_metodo_initial.csv  dim_metodo_por_uf_amostra.csv  dim_metodo_regional_completo_20251114_175753.csv  dim_metodo_regional_completo_LATEST.csv  dim_metodo_v2.csv  dim_metodos_construtivos_base.csv  dim_projetos_initial.csv  (+14 more)
(+120 files in other folders)
