[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "construction-data-pipeline"
version = "0.1.0"
description = "Pipeline de dados para gestão de obras de construção"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "pandas==2.1.4",
    "gspread==6.1.0",
    "oauth2client==4.1.3",
    "numpy==1.26.2",
    "scipy==1.11.4",
    "structlog==23.3.0",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
